@@ -39,6 +39,7 @@ git-annex (8.20201130) UNRELEASED; urgency=medium
   * adjust: Fix some bad behavior when unlocked files use URL keys.
   * smudge: Fix some bad behavior when git add is run on an unlocked
     and modified file that used an URL key.
+  * Added GETGITREMOTENAME to extenal special remote protocol.
 
  -- Joey Hess <id@joeyh.name>  Mon, 04 Jan 2021 12:52:41 -0400
 
